feat : implement SB best practices (#674)
* feat : implement SB best practices

* spotless fix

* fix : issue with containers

* fix issue with starting container